--- a/app/src/main/res/layout/activity_day_meals.xml
+++ b/app/src/main/res/layout/activity_day_meals.xml
@@ -11,23 +11,68 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:elevation="0dp"
-        android:gravity="center">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:src="@drawable/header" />
+        android:layout_alignParentTop="true"
+        android:background="#002e65"
 
+        android:paddingRight="0dp"
+        android:layout_alignParentLeft="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="9dp"
+                android:src="@drawable/logo_white" />
+
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="39dp"
+                android:layout_height="match_parent"
+
+                android:layout_alignParentStart="true"
+
+
+                android:layout_alignParentTop="true"
+                android:onClick="openDrawer"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/profile_on_top"
+                tools:ignore="OnClick"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_below="@+id/appbarid"
+        android:layout_above="@+id/bNavigation"
         android:layout_height="match_parent"
         android:id="@+id/mealrecycler"/>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="#333333"
+        android:scrollbars="horizontal"
+        app:menu="@menu/menu_nav"
+        android:layout_alignParentLeft="true"></android.support.design.widget.BottomNavigationView>
+
 
 
 </RelativeLayout>
