--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Fragment.FragmentAddMealDetailes">
+    tools:context=".Fragment.FragmentMealsDetails">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -15,29 +16,6 @@
         android:background="#ededed"
         android:orientation="vertical"
         android:layout_alignParentLeft="true">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="17dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-                <TextView
-                    android:id="@+id/showMealName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="إسم الوجبة"
-                    android:paddingTop="10dp"/>
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -58,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:paddingTop="10dp"
-                    android:text="مكونات الوجبة"
+                    android:text="القيم الغذائية"
                     android:textColor="#ffffff" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -86,11 +64,11 @@
                     android:layout_marginEnd="42dp"
                     android:layout_marginRight="42dp"
                     android:paddingTop="5dp"
-                    android:text="الكمية"
+                    android:text="نوع السعرات "
                     android:textColor="#ffffff" />
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/totalcals"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -99,7 +77,7 @@
                     android:layout_marginLeft="54dp"
                     android:layout_marginStart="54dp"
                     android:paddingTop="5dp"
-                    android:text="نوع الغذاء"
+                    android:text="مجموع السعرات"
                     android:textColor="#ffffff" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -112,7 +90,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerMealDetailes"
                 android:layout_width="match_parent"
-                android:layout_height="405dp"
+                android:layout_height="213dp"
                 android:layout_marginBottom="45dp">
 
             </android.support.v7.widget.RecyclerView>
