--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,7 @@
         android:background="#cccbcb"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:hint="enter your email"
+        android:hint="الإيميل"
         android:inputType="textEmailAddress"
         android:paddingBottom="7.5dp"
         android:paddingTop="7.5dp" />
@@ -72,10 +72,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="269dp"
         android:text="أو"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -92,7 +92,7 @@
         android:background="#cccbcb"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:hint="Password"
+        android:hint="كلمة المرور"
         android:inputType="textPassword"
         android:paddingBottom="7.5dp"
         android:paddingTop="7.5dp" />
@@ -103,7 +103,7 @@
         android:layout_height="36dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="208dp"
         android:background="@color/scifitBlue"
         android:text="تسجيل الدخول بواسطة جوجل"
         android:textColor="#FFFF" />
@@ -119,18 +119,14 @@
         android:layout_alignParentLeft="true" />
 
 
-
-
-
     <TextView
         android:id="@+id/txtForget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/emailTxt"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/emailTxt"
-        android:layout_marginBottom="149dp"
-        android:text="Forget your password?"
-        android:textColor="@color/scifitBlue"
-        android:layout_alignLeft="@+id/emailTxt" />
+        android:layout_marginBottom="151dp"
+        android:text="نسيت كلمة المرور؟"
+        android:textColor="@color/scifitBlue" />
 
 </RelativeLayout>
