--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -19,29 +19,6 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="17dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-                <TextView
-                    android:id="@+id/showMealName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="إسم الوجبة"
-                    android:paddingTop="10dp"/>
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
@@ -110,9 +87,9 @@
 
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerMealDetailes"
+                android:id="@+id/recyclerMealDetailesElements"
                 android:layout_width="match_parent"
-                android:layout_height="405dp"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="45dp">
 
             </android.support.v7.widget.RecyclerView>
