--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,25 +1,23 @@
-<<<<<<< HEAD
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-=======
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
->>>>>>> 45cb6bac934683e3a3a69302ca4d676f6b50d0b9
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.LoginActivity"
+    android:layout_gravity="center"
     android:background="@drawable/vegowall"
-    android:id="@+id/relativeLayout">
+    android:theme="@style/AppThemeNo"
+    tools:context=".Activity.LoginActivity">
 
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="271dp"
         android:layout_height="122dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,58 +26,71 @@
 
     <TextView
         android:id="@+id/signupTxt"
-        android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="164dp"
+
+        android:layout_marginStart="164dp"
         android:clickable="true"
         android:focusable="true"
-        android:text="new here? Sign Up"
+        android:text="مستخدم جديد؟"
         android:textAlignment="center"
         android:textColor="#626262"
+
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-<<<<<<< HEAD
         app:layout_constraintStart_toStartOf="parent" />
-=======
-        android:layout_alignParentLeft="true" />
->>>>>>> 45cb6bac934683e3a3a69302ca4d676f6b50d0b9
 
     <Button
         android:id="@+id/signinBtn"
-        android:layout_width="308dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#cf0545"
         android:gravity="center"
-        android:text="sign_in"
+        android:text="تسجيل الدخول"
         android:textColor="#ffff"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintBottom_toBottomOf="@+id/divider2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtForget" />
+        app:layout_constraintTop_toBottomOf="@+id/txtForget"
+        app:layout_constraintVertical_bias="0.0" />
+
 
     <EditText
         android:id="@+id/emailTxt"
-        android:layout_width="301dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:background="#cccbcb"
+        android:background="@drawable/custom_edit_text"
         android:ems="10"
-        android:gravity="center_horizontal"
-        android:hint="enter your email"
+        android:drawableRight="@drawable/arroba3"
+        android:drawablePadding="10dp"
+        android:gravity="right"
+        android:hint="البريد الإلكتروني"
+        android:textSize="16dp"
         android:inputType="textEmailAddress"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp"
+        android:paddingBottom="7dp"
+        android:paddingTop="8.5dp"
+        android:paddingRight="10dp"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+       />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="117dp"
-        android:layout_height="25dp"
+        android:layout_height="wrap_content"
 
         android:layout_marginTop="16dp"
         android:text="أو"
@@ -92,28 +103,41 @@
 
     <EditText
         android:id="@+id/passwordTxt"
-        android:layout_width="301dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
         android:layout_marginTop="16dp"
-        android:background="#cccbcb"
+        android:background="@drawable/custom_edit_text"
         android:ems="10"
-        android:gravity="center_horizontal"
-        android:hint="Password"
+        android:textSize="16dp"
+        android:gravity="right"
+        android:hint="كلمة المرور"
+        android:drawableRight="@drawable/lock"
+        android:drawablePadding="10dp"
         android:inputType="textPassword"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp"
+        android:paddingBottom="7dp"
+        android:paddingRight="7dp"
+        android:paddingTop="8.5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
 
     <Button
         android:id="@+id/loginGoo"
-        android:layout_width="302dp"
-        android:layout_height="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="41dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
         android:layout_marginTop="24dp"
         android:background="@color/scifitBlue"
+        android:drawablePadding="35dp"
+        android:drawableRight="@drawable/google_plus2"
+        android:gravity="right"
+        android:paddingRight="20dp"
         android:text="تسجيل الدخول بواسطة جوجل"
         android:textColor="#FFFF"
+        android:paddingTop="3dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -122,26 +146,11 @@
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginBottom="42dp"
-        android:background="@color/scifitBlue"
-<<<<<<< HEAD
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="175dp"
-        android:layout_height="1dp"
-        android:background="@color/scifitBlue"
-        app:layout_constraintTop_toTopOf="@+id/divider4"
+        android:background="#cccbcb"
+        app:layout_constraintBottom_toTopOf="@+id/signupTxt"
         app:layout_constraintStart_toStartOf="parent" />
-=======
-        android:layout_alignParentLeft="true" />
 
-
-
-
->>>>>>> 45cb6bac934683e3a3a69302ca4d676f6b50d0b9
 
     <TextView
         android:id="@+id/txtForget"
@@ -151,15 +160,41 @@
         android:layout_marginLeft="52dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="52dp"
-        android:text="Forget your password?"
+        android:layout_marginTop="8dp"
+
+        android:text="نسيت كلمة المرور؟"
+
         android:textColor="@color/scifitBlue"
-<<<<<<< HEAD
+        app:fontFamily="@font/cairo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.821"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/scifitBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/emailTxt" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/scifitBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
-=======
-        android:layout_alignLeft="@+id/emailTxt" />
->>>>>>> 45cb6bac934683e3a3a69302ca4d676f6b50d0b9
+
 
 </android.support.constraint.ConstraintLayout>
