--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,159 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/vegowall"
-    tools:context=".Activity.SignupActivity">
+    tools:context=".Activity.SignupActivity"
+    android:theme="@style/AppThemeNo"
+    android:id="@+id/relativeLayout2">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/actionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-
-        android:layout_alignParentTop="true"
-        android:background="#002e65"
-
-        android:paddingRight="0dp"
-        android:layout_alignParentLeft="true">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            >
-
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:paddingTop="9dp"
-                android:src="@drawable/logo_white" />
-
-
-            <ImageView
-                android:id="@+id/profile"
-                android:layout_width="39dp"
-                android:layout_height="match_parent"
-
-                android:layout_alignParentStart="true"
-
-
-                android:layout_alignParentTop="true"
-                android:onClick="openDrawer"
-                android:paddingTop="2dp"
-                android:src="@drawable/profile_on_top"
-                tools:ignore="OnClick"
-                android:layout_alignParentLeft="true" />
-
-        </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="271dp"
+        android:layout_height="122dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_welcome_screen" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="302dp"
-        android:layout_height="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="125dp"
+        android:layout_width="match_parent"
+        android:layout_height="41dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginTop="24dp"
         android:background="@color/scifitBlue"
-        android:text="تسجيل الدخول بواسطة جوجل"
-        android:textColor="#FFFF" />
+        android:drawablePadding="35dp"
+        android:drawableRight="@drawable/google_plus2"
+        android:gravity="right"
+        android:paddingRight="20dp"
+        android:text="التسجيل بواسطة جوجل"
+        android:textColor="#FFFF"
+        android:paddingTop="3dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="117dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="8dp"
+        android:text="أو"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <TextView
         android:id="@+id/signinTxt"
         android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="4dp"
         android:clickable="true"
-        android:text="Already Registerd ? Sign in here"
+        android:text="لديك حساب؟ تسجيل الدخول"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_alignParentLeft="true" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/signupBtn"
         android:layout_width="331dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="115dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#cf0545"
         android:gravity="center"
-        android:text="Sign-up"
-        android:textColor="#ffff" />
+        android:text="تسجيل مستخدم جديد"
+        android:textColor="#ffff"
+        app:layout_constraintBottom_toTopOf="@+id/signinTxt"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userNameTxt"
+        app:layout_constraintVertical_bias="0.785" />
 
     <EditText
         android:id="@+id/emailTxt"
-        android:layout_width="331dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="268dp"
-        android:background="#cccbcb"
+        android:layout_width="match_parent"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custom_edit_text"
         android:ems="10"
-        android:gravity="center"
-        android:hint="enter your email"
-        android:inputType="textPersonName"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp" />
+        android:drawableRight="@drawable/arroba3"
+        android:drawablePadding="10dp"
+        android:gravity="right"
+        android:hint="البريد الإلكتروني"
+        android:textSize="16dp"
+        android:inputType="textEmailAddress"
+        android:paddingBottom="7dp"
+        android:paddingTop="8.5dp"
+        android:paddingRight="10dp"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/scifitBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/emailTxt" />
 
     <EditText
         android:id="@+id/userNameTxt"
-        android:layout_width="331dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="192dp"
-        android:background="#cccbcb"
-        android:ems="10"
-        android:gravity="center_horizontal"
-        android:hint="confirm password"
-        android:inputType="textPassword"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp" />
-
-    <TextView
-        android:id="@+id/textView10"
         android:layout_width="match_parent"
-        android:layout_height="33dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="205dp"
-        android:text="أو"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="42dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custom_edit_text"
+        android:ems="10"
+        android:textSize="16dp"
+        android:gravity="right"
+        android:hint="تأكيد كلمة المرور"
+        android:drawableRight="@drawable/lock"
+        android:drawablePadding="10dp"
+        android:inputType="textPassword"
+        android:paddingBottom="7dp"
+        android:paddingRight="7dp"
+        android:paddingTop="8.5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
+    <View
+        android:id="@+id/view4"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/scifitBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/userNameTxt" />
 
     <EditText
         android:id="@+id/passwordTxt"
-        android:layout_width="331dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="243dp"
-        android:background="#cccbcb"
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/custom_edit_text"
         android:ems="10"
-        android:gravity="center_horizontal"
-        android:hint="enter_password"
+        android:textSize="16dp"
+        android:gravity="right"
+        android:hint="كلمة المرور"
+        android:drawableRight="@drawable/lock"
+        android:drawablePadding="10dp"
         android:inputType="textPassword"
-        android:paddingBottom="7.5dp"
-        android:paddingTop="7.5dp" />
+        android:paddingBottom="7dp"
+        android:paddingRight="7dp"
+        android:paddingTop="8.5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
+    <View
+        android:id="@+id/views"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="40dp"
+        android:background="@color/scifitBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/passwordTxt" />
 
-    LinearLayout
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
