--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -9,178 +9,172 @@
     android:background="@drawable/vegowall">
 
 
+
     <android.support.constraint.ConstraintLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_gravity="center"
+        android:layout_height="match_parent"
+        >
+
 
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="match_parent"
-            android:layout_height="71dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="172dp"
-            android:backgroundTint="@color/scifitRed"
-            android:onClick="registerBtn"
-            android:text="Register"
-            android:textColor="#ffffff"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="27dp"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="#cf0545"
+            android:gravity="center"
+            android:text="حفظ ومتابعة"
+            android:textColor="#ffff"
+            app:layout_constraintBottom_toTopOf="@+id/signinTxt"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/heightTxt" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner3"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
             android:id="@+id/ivProfile"
             android:layout_width="129dp"
             android:layout_height="136dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/common_google_signin_btn_icon_dark"
-            app:layout_constraintBottom_toTopOf="@+id/userNameTxt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            android:layout_marginTop="4dp"
 
-        <Spinner
+            android:src="@drawable/common_google_signin_btn_icon_dark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <org.angmarch.views.NiceSpinner
             android:id="@+id/spinner2"
             android:layout_width="match_parent"
             android:layout_height="39dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
 
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="30dp"
 
-            android:layout_marginTop="8dp"
-            android:backgroundTint="@color/scifitBlue"
+            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="#dedcdc"
             android:spinnerMode="dropdown"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ageTxt"
-            app:layout_constraintVertical_bias="0.072" />
+            app:layout_constraintTop_toBottomOf="@+id/ageTxt" />
 
         <EditText
             android:id="@+id/heightTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="10dp"
-            android:background="#cccbcb"
+            android:layout_width="108dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/arroba3"
             android:ems="10"
-            android:gravity="center"
-            android:hint="Height"
-            android:inputType="number"
-            android:paddingBottom="7.5dp"
-            android:paddingTop="7.5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weightTxt"
-            app:layout_constraintVertical_bias="0.015" />
+            android:gravity="right"
+            android:hint="الطول"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toStartOf="@+id/weightTxt"
+            app:layout_constraintHorizontal_bias="0.176"
+            app:layout_constraintStart_toEndOf="@+id/ageTxt"
+            app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
 
-        <Spinner
+        <org.angmarch.views.NiceSpinner
             android:id="@+id/spinner3"
             android:layout_width="match_parent"
             android:layout_height="39dp"
-            android:layout_marginBottom="8dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="30dp"
 
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-
-            android:layout_marginTop="8dp"
-            android:backgroundTint="@color/scifitBlue"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginRight="30dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="#dedcdc"
+            android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner2"
-            app:layout_constraintVertical_bias="0.107" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
         <EditText
             android:id="@+id/userNameTxt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15dp"
-
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginTop="141dp"
-            android:background="#cccbcb"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/arroba3"
             android:ems="10"
-            android:gravity="center"
-            android:hint="Name"
-            android:inputType="textPersonName"
-            android:paddingBottom="7.5dp"
-            android:paddingTop="7.5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            android:gravity="right"
+            android:hint="الإسم"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.054" />
+            app:layout_constraintTop_toBottomOf="@+id/ivProfile" />
 
         <EditText
             android:id="@+id/weightTxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="15dp"
-            android:background="#cccbcb"
+            android:layout_width="108dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/arroba3"
             android:ems="10"
-            android:gravity="center"
-            android:hint="Weight"
-            android:inputType="number"
-            android:paddingBottom="7.5dp"
-            android:paddingTop="7.5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="right"
+            android:hint="الوزن"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/spinner2"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userNameTxt"
-            app:layout_constraintVertical_bias="0.008" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/ageTxt"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="17dp"
-            android:background="#cccbcb"
+            android:layout_width="108dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="18dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/arroba3"
             android:ems="10"
-            android:gravity="center"
-            android:hint="Age"
-            android:imeOptions="actionDone"
-            android:inputType="number"
-            android:paddingBottom="7.5dp"
-            android:paddingTop="7.5dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/heightTxt"
-            app:layout_constraintVertical_bias="0.0" />
+            android:gravity="right"
+            android:hint="العمر"
+            android:inputType="textEmailAddress"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
     </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
