--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,16 +72,11 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_edit_text"
         android:ems="10"
-<<<<<<< HEAD
         android:drawableRight="@drawable/arroba3"
         android:drawablePadding="10dp"
         android:gravity="right"
         android:hint="البريد الإلكتروني"
         android:textSize="16dp"
-=======
-        android:gravity="center_horizontal"
-        android:hint="الإيميل"
->>>>>>> 660004a7933c931083ff5bfd97e4ed044b272405
         android:inputType="textEmailAddress"
         android:paddingBottom="7dp"
         android:paddingTop="8.5dp"
@@ -96,25 +91,17 @@
         android:id="@+id/textView10"
         android:layout_width="117dp"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
-
-        android:layout_marginTop="16dp"
-        android:text="أو"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintHorizontal_bias="0.502"
-=======
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="269dp"
+        android:layout_marginTop="16dp"
         android:text="أو"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
->>>>>>> 660004a7933c931083ff5bfd97e4ed044b272405
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginGoo" />
+        app:layout_constraintTop_toBottomOf="@+id/loginGoo"
+        app:layout_constraintVertical_bias="0.025" />
 
     <EditText
         android:id="@+id/passwordTxt"
@@ -125,16 +112,11 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_edit_text"
         android:ems="10"
-<<<<<<< HEAD
         android:textSize="16dp"
         android:gravity="right"
         android:hint="كلمة المرور"
         android:drawableRight="@drawable/lock"
         android:drawablePadding="10dp"
-=======
-        android:gravity="center_horizontal"
-        android:hint="كلمة المرور"
->>>>>>> 660004a7933c931083ff5bfd97e4ed044b272405
         android:inputType="textPassword"
         android:paddingBottom="7dp"
         android:paddingRight="7dp"
@@ -144,29 +126,23 @@
         app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
 
     <Button
-<<<<<<< HEAD
         android:id="@+id/loginGoo"
         android:layout_width="match_parent"
         android:layout_height="41dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="24dp"
-=======
-        android:id="@+id/button"
-        android:layout_width="302dp"
-        android:layout_height="36dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="208dp"
->>>>>>> 660004a7933c931083ff5bfd97e4ed044b272405
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginTop="32dp"
         android:background="@color/scifitBlue"
         android:drawablePadding="35dp"
         android:drawableRight="@drawable/google_plus2"
         android:gravity="right"
         android:paddingRight="20dp"
+        android:paddingTop="3dp"
         android:text="تسجيل الدخول بواسطة جوجل"
         android:textColor="#FFFF"
-        android:paddingTop="3dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -175,33 +151,25 @@
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-<<<<<<< HEAD
-
-        android:background="#cccbcb"
         app:layout_constraintBottom_toTopOf="@+id/signupTxt"
-        app:layout_constraintStart_toStartOf="parent" />
-=======
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="42dp"
         android:background="@color/scifitBlue"
         android:layout_alignParentLeft="true" />
->>>>>>> 660004a7933c931083ff5bfd97e4ed044b272405
 
 
     <TextView
         android:id="@+id/txtForget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="52dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="8dp"
-
         android:text="نسيت كلمة المرور؟"
-
         android:textColor="@color/scifitBlue"
         app:fontFamily="@font/cairo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -232,14 +200,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
-
-=======
+        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
         android:layout_alignEnd="@+id/emailTxt"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="151dp"
         android:text="نسيت كلمة المرور؟"
-        android:textColor="@color/scifitBlue" />
->>>>>>> 660004a7933c931083ff5bfd97e4ed044b272405
+        android:textColor="@color/scifitBlue"
+        android:layout_alignRight="@+id/emailTxt" />
 
 </android.support.constraint.ConstraintLayout>
