--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="wall">#e5e5e5</color>
     <color name="scifitBlue">#002e65</color>
     <color name="scifitRed">#cf0545</color>
+    <color name="grey">#ededed</color>
 
 
     <color name="tabtextcolor">#fff</color>
