--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -4,56 +4,163 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.AddNewExerciseActivity">
+    tools:context=".Activity.AddNewExerciseActivity"
+    android:background="#ededed"
+    >
+
+
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/actionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:gravity="top"
+        android:layout_alignParentTop="true"
+        android:background="#002e65"
+
+        android:paddingRight="0dp"
+        android:layout_alignParentLeft="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="135dp"
+                android:paddingTop="9dp"
+                android:src="@drawable/logo_white"
+                android:layout_marginLeft="135dp"
+                android:layout_alignParentLeft="true" />
+
+
+            <ImageView
+                android:id="@+id/profile"
+                android:layout_width="29dp"
+                android:layout_height="match_parent"
+
+                android:layout_alignParentStart="true"
+
+
+                android:layout_alignParentTop="true"
+                android:onClick="openDrawer"
+                android:paddingTop="2dp"
+                android:src="@drawable/menu"
+                tools:ignore="OnClick"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_below="@+id/actionBar"
+        android:background="@color/md_white_1000"
+        >
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="إضافة تمرين جديد"
+            android:layout_centerVertical="true"
+            android:fontFamily="@font/cairo_semibold"
+            android:textSize="16sp"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="113dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginRight="55dp">
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/header" />
+    </android.support.v7.widget.CardView>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/txtName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="28dp"
-        android:gravity="center"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/custom_edit_text_white"
         android:ems="10"
+        android:gravity="center"
+        android:hint="اسم التمرين"
         android:inputType="textPersonName"
-        android:hint="اسم التمرين" />
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"/>
+    <View
+        android:id="@+id/view5"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+
+        android:layout_below="@+id/txtName"
+        android:background="@color/scifitBlue"
+        android:text="نسيت كلمة المرور؟"
+        android:textColor="@color/scifitBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtName" />
+
 
     <Spinner
-        android:id="@+id/spinner6"
+        android:id="@+id/spinnerMuscle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="169dp" />
-
-    <Spinner
-        android:id="@+id/spinner12"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="94dp" />
-
-    <Spinner
-        android:id="@+id/spinner9"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
-
-    <Spinner
-        android:id="@+id/spinner13"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="184dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="245dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"/>
+    <View
+        android:id="@+id/view6"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_alignBottom="@+id/spinnerMuscle"
+        android:layout_centerHorizontal="true"
+        android:background="@color/scifitBlue"
+        android:text="نسيت كلمة المرور؟"
+        android:textColor="@color/scifitBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerMuscle"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="67dp"
-        android:text="Button" />
+        android:layout_marginBottom="175dp"
+        android:backgroundTint="@color/scifitRed"
+        android:text="إضافة تمرين جديد"
+        android:textColor="@color/md_white_1000"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"/>
+
+
 </RelativeLayout>
