--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -151,13 +151,12 @@
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/signupTxt"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="42dp"
         android:background="@color/scifitBlue"
-        android:layout_alignParentLeft="true" />
+        app:layout_constraintBottom_toTopOf="@+id/signupTxt"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <TextView
