--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentStart="true"
         android:background="#333333"
         android:scrollbars="horizontal"
-        app:menu="@menu/menu_nav">
+        app:menu="@menu/menu_nav"
+        android:layout_alignParentLeft="true">
 
     </android.support.design.widget.BottomNavigationView>
 
@@ -71,7 +72,7 @@
         android:layout_height="130dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/actionBar"
-        android:background="#bebcbc"
+        android:background="@color/grey"
         android:elevation="0dp"
         android:gravity="center"
         android:layout_alignParentLeft="true">
@@ -108,7 +109,7 @@
         android:layout_width="match_parent"
         android:layout_below="@+id/tablayout_id"
         android:layout_above="@+id/bNavigation"
-        android:background="#bebcbc"/>
+        android:background="@color/grey"/>
 
 
     <android.support.v4.view.ViewPager
@@ -118,7 +119,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="56dp"
-        android:background="#bebcbc" />
+        android:background="@color/grey"
+        android:layout_alignParentLeft="true" />
 
 
 
