--- a/app/src/main/res/layout/card_sets_add.xml
+++ b/app/src/main/res/layout/card_sets_add.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_alignParentTop="true"
@@ -20,40 +20,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/txtQuantity"
+            <TextView
+                android:id="@+id/txtSet"
                 android:layout_width="74dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
+                android:layout_marginEnd="56dp"
                 android:ems="10"
-                android:inputType="number" />
+                android:text="1"
+                android:gravity="center"
+                android:textSize="18dp"
+                android:fontFamily="@font/cairo_semibold"
+                android:inputType="number"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="56dp"
+                android:layout_alignParentRight="true" />
 
             <EditText
                 android:id="@+id/txtIngr"
-                android:layout_width="156dp"
+                android:layout_width="82dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="32dp"
-                android:layout_marginStart="32dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="56dp"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="number"
+                android:layout_marginLeft="56dp"
+                android:background="@drawable/custom_edit_text"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/mealCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:text="1"
-        android:textSize="36sp"
-        android:layout_alignParentRight="true" />
+
 
 </RelativeLayout>
