--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -36,46 +36,47 @@
                 android:layout_height="27dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="17dp"
+                android:layout_marginEnd="45dp"
                 android:paddingBottom="3dp"
                 android:src="@drawable/icons_meal_px"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="17dp" />
+                android:layout_marginRight="45dp" />
 
             <ImageView
                 android:layout_width="26dp"
                 android:layout_height="27dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="102dp"
+                android:layout_marginStart="165dp"
                 android:paddingBottom="3dp"
                 android:src="@drawable/calories"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="102dp" />
+                android:layout_marginLeft="165dp" />
 
             <TextView
                 android:id="@+id/textViewShortDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
+
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="33dp"
+                android:layout_marginStart="16dp"
                 android:gravity="center_vertical"
-                android:text="Card Title"
+                android:text="العضلات المستهدفة"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="33dp" />
+                android:layout_marginLeft="16dp" />
 
             <TextView
-                android:id="@+id/textViewTitle"
+                android:id="@+id/txtNameExercise"
                 android:layout_width="wrap_content"
                 android:layout_height="29dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="51dp"
+                android:layout_marginEnd="86dp"
                 android:gravity="center_vertical"
-                android:text="Card Title"
+                android:text="إسم التمرين"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="51dp" />
+                android:layout_marginRight="86dp" />
 
 
         </RelativeLayout>
