--- a/app/src/main/res/layout/day_meals.xml
+++ b/app/src/main/res/layout/day_meals.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:paddingBottom="5dp"
+        android:layout_alignParentLeft="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,7 +26,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="100dp"
-                app:srcCompat="@drawable/icons_meal_px" />
+                app:srcCompat="@drawable/icons_meal_px"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="100dp" />
 
             <ImageView
                 android:id="@+id/calsIcon"
@@ -33,7 +37,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="140dp"
-                app:srcCompat="@drawable/calories" />
+                app:srcCompat="@drawable/calories"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="140dp" />
 
             <TextView
                 android:id="@+id/txtCount"
@@ -62,7 +68,9 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="-68dp"
                 android:layout_toEndOf="@+id/txtDay"
-                app:srcCompat="@drawable/icons_calendar_px_" />
+                app:srcCompat="@drawable/icons_calendar_px_"
+                android:layout_marginLeft="-68dp"
+                tools:ignore="RtlCompat" />
 
             <TextView
                 android:id="@+id/txtDay"
@@ -72,7 +80,9 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="68dp"
                 android:text="يوم 1"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="68dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
