--- a/app/src/main/res/layout/fragment_add_meal_detailes.xml
+++ b/app/src/main/res/layout/fragment_add_meal_detailes.xml
@@ -42,10 +42,10 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="38dp"
+            android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:layout_marginTop="15dp">
 
             <RelativeLayout
@@ -58,18 +58,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:paddingTop="10dp"
+
                     android:text="مكونات الوجبة"
+                    android:textSize="20sp"
                     android:textColor="#ffffff" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:layout_marginTop="5dp">
 
             <RelativeLayout
@@ -88,20 +89,24 @@
                     android:layout_marginRight="42dp"
                     android:paddingTop="5dp"
                     android:text="الكمية"
+                    android:textSize="14sp"
                     android:textColor="#ffffff" />
 
                 <TextView
                     android:id="@+id/textView11"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
+                    android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginLeft="54dp"
-                    android:layout_marginStart="54dp"
+                    android:layout_marginStart="52dp"
+                    android:layout_marginTop="0dp"
                     android:paddingTop="5dp"
                     android:text="نوع الغذاء"
-                    android:textColor="#ffffff" />
+
+                    android:textColor="#ffffff"
+                    android:textSize="14sp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="52dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -114,7 +119,9 @@
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="213dp"
-            android:layout_marginBottom="45dp">
+            android:layout_marginBottom="45dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp">
 
         </android.support.v7.widget.RecyclerView>
 
