--- a/app/src/main/res/layout/meal_cardview_user.xml
+++ b/app/src/main/res/layout/meal_cardview_user.xml
@@ -30,7 +30,9 @@
                 android:layout_marginTop="11dp"
                 android:ems="10"
                 android:inputType="number"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="41dp" />
 
             <TextView
                 android:id="@+id/txtIngr"
@@ -42,7 +44,9 @@
                 android:layout_marginTop="11dp"
                 android:ems="10"
                 android:gravity="right"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="28dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
