--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -72,10 +72,9 @@
             android:layout_height="106dp">
 
             <ImageView
+                android:id="@+id/mealImg"
                 android:layout_width="188dp"
-                android:layout_height="match_parent"
-
-                android:src="@drawable/header" />
+                android:layout_height="match_parent" />
 
         </android.support.v7.widget.CardView>
 
