--- a/app/src/main/res/layout/days_adapter_exercise.xml
+++ b/app/src/main/res/layout/days_adapter_exercise.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,7 +25,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="93dp"
-                app:srcCompat="@drawable/workoutcount" />
+                app:srcCompat="@drawable/workoutcount"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="93dp" />
 
             <ImageView
                 android:id="@+id/calsIcon"
@@ -33,7 +36,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="140dp"
-                app:srcCompat="@drawable/mouscle" />
+                app:srcCompat="@drawable/mouscle"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="140dp" />
 
             <TextView
                 android:id="@+id/txtCount"
@@ -42,7 +47,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:text="عدد التمارين"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_alignParentLeft="true" />
 
             <TextView
                 android:id="@+id/txtCals"
@@ -59,7 +65,9 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="-68dp"
                 android:layout_toEndOf="@+id/txtDay"
-                app:srcCompat="@drawable/icons_calendar_px_" />
+                app:srcCompat="@drawable/icons_calendar_px_"
+                android:layout_marginLeft="-68dp"
+                android:layout_toRightOf="@+id/txtDay" />
 
             <TextView
                 android:id="@+id/txtDay"
@@ -69,7 +77,9 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="68dp"
                 android:text="يوم 1"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="68dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
