--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_alignParentTop="true"
@@ -18,32 +18,31 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/txtQuantity"
                 android:layout_width="74dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
                 android:ems="10"
-                android:inputType="number"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="32dp" />
+                android:inputType="number" />
 
             <EditText
                 android:id="@+id/txtIngr"
                 android:layout_width="156dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="32dp"
                 android:layout_marginStart="32dp"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="32dp" />
+                android:inputType="textPersonName" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
