--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.Add_meal2user">
+    tools:context=".Fragment.Add_workout2user">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -17,7 +17,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/relativeLayout3"
             android:layout_width="match_parent"
-            android:layout_height="416dp"
+            android:layout_height="535dp"
             android:background="@color/grey">
 
             <RelativeLayout
@@ -39,7 +39,21 @@
             <Spinner
                 android:id="@+id/spinner5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="11dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spinner6" />
+
+            <Spinner
+                android:id="@+id/spinner6"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
@@ -52,7 +66,7 @@
             <Spinner
                 android:id="@+id/spinner8"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
@@ -65,7 +79,7 @@
             <Spinner
                 android:id="@+id/spinner10"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
@@ -78,12 +92,12 @@
             <Spinner
                 android:id="@+id/spinner7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:layout_marginTop="13dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginRight="25dp"
-                android:layout_marginLeft="25dp"
                 app:layout_constraintTop_toBottomOf="@+id/relative" />
 
             <android.support.v7.widget.CardView
@@ -94,8 +108,9 @@
                 android:layout_marginLeft="55dp"
                 android:layout_marginRight="55dp"
                 android:layout_marginStart="55dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="23dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinner5">
 
@@ -141,23 +156,23 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="71dp"
-                    android:text="الجلسات"
-                    android:textColor="@color/md_white_1000"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="71dp" />
+                    android:layout_marginEnd="71dp"
+                    android:layout_marginRight="71dp"
+                    android:text="الجلسات"
+                    android:textColor="@color/md_white_1000" />
 
                 <TextView
                     android:id="@+id/txtRepsShow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
 
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="71dp"
                     android:layout_marginStart="71dp"
                     android:text="التكرار"
-                    android:textColor="@color/md_white_1000"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="71dp" />
+                    android:textColor="@color/md_white_1000" />
             </RelativeLayout>
 
         </android.support.constraint.ConstraintLayout>
@@ -165,7 +180,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerSetsAdmin"
             android:layout_width="match_parent"
-            android:layout_height="171dp"
+            android:layout_height="201dp"
             android:background="@color/grey" />
 
         <android.support.constraint.ConstraintLayout
@@ -201,7 +216,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:fontFamily="@font/cairo_semibold"
-                android:layout_marginRight="46dp" />
+                android:layout_marginRight="46dp"
+                />
+
 
         </android.support.constraint.ConstraintLayout>
 
